@@ -1,3 +1,9 @@
+2004-09-23  Paolo Carlini  <pcarlini@suse.de>
+	    Magnus Fromreide  <magfr@lysator.liu.se>
+	    
+	* include/bits/boost_concept_check.h (struct _SequenceConcept):
+	Remove wrong requirement, i.e., not present in Table 67.
+
 2004-09-21  Paolo Carlini  <pcarlini@suse.de>
 
 	PR libstdc++/12882 (cont)
